--- a/Vanguard/pom.xml
+++ b/Vanguard/pom.xml
@@ -27,5 +27,10 @@
       <version>7.10.2</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.seleniumhq.selenium</groupId>
+      <artifactId>selenium-java</artifactId>
+      <version>4.27.0</version>
+    </dependency>
   </dependencies>
 </project>
