--- a/Vanguard/pom.xml
+++ b/Vanguard/pom.xml
@@ -45,6 +45,11 @@
   </profiles>
   <dependencies>
     <dependency>
+      <groupId>io.github.bonigarcia</groupId>
+      <artifactId>webdrivermanager</artifactId>
+      <version>5.8.0</version>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
