--- a/Vanguard/pom.xml
+++ b/Vanguard/pom.xml
@@ -64,5 +64,11 @@
             <artifactId>selenium-java</artifactId>
             <version>4.27.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
